--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "notionColorPreview",
+  "name": "notion-color-preview",
   "version": "1.0.0",
-  "dependencies": {}
+  "type": "module",
+  "dependencies": {
+    "@resvg/resvg-js": "^2.1.0"
+  }
 }
