--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "notionColorPreview",
   "version": "1.0.0",
-  "type": "commonjs",
-  "scripts": {
-    "start": "node index.js"
+  "type": "module",
+  "dependencies": {
+    "@resvg/resvg-js": "^2.1.0"
   }
 }
