--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notionColorPreview",
   "version": "1.0.0",
   "type": "module",
-  "dependencies": {
-    "@resvg/resvg-js": "^2.1.0"
+  "scripts": {
+    "start": "node index.js"
   }
 }
